deploy/08-k8s/ansible/ovn-1.2.0/ovnkube-identity.yaml
# ovnkube-identity
# starts ovnkube-identity
# it is run on the master(s).
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: ovnkube-identity
  # namespace set up by install
  namespace: ovn-kubernetes
  annotations:
    kubernetes.io/description: |
      This DaemonSet launches the ovnkube-identity networking component on control-plane nodes.
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: ovnkube-identity
  updateStrategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ovnkube-identity
        name: ovnkube-identity
        component: network
        type: infra
        kubernetes.io/os: "linux"
    spec:
      priorityClassName: "system-cluster-critical"
      serviceAccountName: ovnkube-identity
      hostNetwork: true
      dnsPolicy: Default
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
        kubernetes.io/os: "linux"
      containers:
      - name: ovnkube-identity
        image: "registry.core.syscallx86.com/ovn-kubernetes:v1.2.0"
        imagePullPolicy: "IfNotPresent"
        command: ["/root/ovnkube.sh", "ovnkube-identity"]
        securityContext:
          runAsUser: 0
        terminationMessagePolicy: FallbackToLogsOnError
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
          - mountPath: /etc/webhook-cert/
            name: webhook-cert
      volumes:
        - name: webhook-cert
          secret:
            secretName: ovnkube-webhook-cert
      tolerations:
      - operator: "Exists"

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ovn-kubernetes-admission-webhook-node
webhooks:
  - name: ovn-kubernetes-admission-webhook-node.k8s.io
    clientConfig:
      url: https://localhost:9443/node
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFekNDQXZ1Z0F3SUJBZ0lVR2t6V0NUN3Rva2gwYzlFMERsdGhCaUFUQnpFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09jMlZzWmkxemFXZHVaV1F0WTJFd0hoY05Nall3TWpBeU1EazBNalF3V2hjTgpNamN3TXpBNU1EazBNalF3V2pBWk1SY3dGUVlEVlFRRERBNXpaV3htTFhOcFoyNWxaQzFqWVRDQ0FpSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0lQQURDQ0Fnb0NnZ0lCQU5lK0dLY25iOGVPblNGNWw5Mi8vbS9yekpzN0tGQXYKaWlOcys4cEtmc1FoZHcyQktPbC9tZ1FZRUxKWEN3ZFI3M2ZGNFhsQTd5R2lMeEpMcE1sZjVuTUtsaFVsQlZ4WQpVVGpHYnQzZTVv [...]
    admissionReviewVersions: ['v1']
    sideEffects: None
    rules:
      - operations: [ "UPDATE" ]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["nodes/status"] # Using /status subresource doesn't protect from other users changing the annotations
        scope: "*"

# in non-ic environments ovnkube-node doesn't have the permissions to update pods
